<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_getCapImage"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <EditText
        android:id="@+id/editCamName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edit_getCapTitle"
        android:background="@drawable/roundcorner"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnCam_cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:layout_marginRight="4dp" />

        <Button
            android:id="@+id/btnCam_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:layout_marginLeft="4dp" />
    </LinearLayout>
</LinearLayout>