<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_layout">
        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                >
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                    <TextView
                            android:text="@string/titleBuilding"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:textColor="#FFFFFF"
                            android:layout_gravity="center"
                            android:gravity="center"/>

                    <EditText
                            android:id="@+id/editImageName"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/username"
                            android:background="@drawable/roundcorner"
                            android:singleLine="true"
                            />
                    <EditText
                            android:id="@+id/addressOne"
                            android:hint="@string/addressOne"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/roundcorner"
                            android:layout_marginTop="10dp"
                            android:singleLine="true"
                            />
                    <EditText
                            android:id="@+id/addressTwo"
                            android:hint="@string/addressTwo"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/roundcorner"
                            android:layout_marginTop="10dp"
                            android:singleLine="true" />
                    <EditText
                            android:id="@+id/city"
                            android:hint="@string/city"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/roundcorner"
                            android:layout_marginTop="10dp"
                            android:singleLine="true" />
                    <EditText
                            android:id="@+id/state"
                            android:hint="@string/state"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/roundcorner"
                            android:layout_marginTop="10dp"
                            android:singleLine="true" />
                    <EditText
                            android:id="@+id/zipCode"
                            android:hint="@string/zip"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/roundcorner"
                            android:layout_marginTop="10dp"
                            android:singleLine="true"
                            android:inputType="number"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">
                        <Button
                                android:id="@+id/cancelImgName"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/cancel"
                                android:background="@drawable/custom_button"
                                style="?android:borderlessButtonStyle"
                                android:layout_marginRight="4dp"
                                android:layout_marginEnd="4dp"/>
                        <Button
                                android:id="@+id/saveImageName"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/save"
                                android:background="@drawable/custom_button"
                                style="?android:borderlessButtonStyle"
                                android:layout_marginLeft="4dp"
                                android:layout_marginStart="4dp"/>
                    </LinearLayout>
        </LinearLayout>
                </ScrollView>

</LinearLayout>