<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <!-- <item android:id="@+id/wifiOperators"
        android:title="@string/wifiOperators"
        android:icon="@drawable/ic_action_network_wifi"
        android:checked="true"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/networkOperators"
        android:title="@string/networkOperators"
        android:icon="@drawable/ic_action_network_cell"
        android:checked="true"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/notepad"
        android:title="@string/notePad"
        android:icon="@drawable/ic_action_notepad_icon"
        android:checkable="true"
        android:visible="true"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>-->
    <item android:id="@+id/save"
        android:title="@string/save"
        android:icon="@drawable/ic_action_save"
        android:checkable="true"
        android:visible="true"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/pdfSelector"
        android:title="@string/selectPDF"
        android:checkable="true"
        android:visible="true"
        android:orderInCategory="11"
        app:showAsAction="never"/>
    <item android:id="@+id/PlansViewer"
        android:title="@string/viewPlans"
        android:checkable="true"
        android:visible="true"
        android:orderInCategory="12"
        app:showAsAction="never"/>

    <item android:id="@+id/BuildingInfo"
          android:title="@string/buildingInfo"
          android:checkable="true"
          android:visible="true"
          android:orderInCategory="13"
          app:showAsAction="never"/>
   <!-- <item android:id="@+id/cameraDialog"
          android:title="@string/floorCapture"
          android:checkable="true"
          android:visible="true"
          android:orderInCategory="4"
          app:showAsAction="never"/>
    <item android:id="@+id/customDrawing"
          android:title="@string/customDrawing"
          android:visible="true"
          android:orderInCategory="5"
          app:showAsAction="never" />
    <item android:id="@+id/drawing"
        android:title="@string/drawing"
        android:visible="true"
        android:orderInCategory="6"
        app:showAsAction="never" />-->
   <!-- <item android:id="@+id/drawingErase"
        android:title="@string/drawingErase"
        android:visible="true"
        android:orderInCategory="7"
        app:showAsAction="never" />-->
   <!-- <item android:id="@+id/drawingDelete"
        android:title="@string/drawingDelete"
        android:visible="true"
        android:orderInCategory="8"
        app:showAsAction="never" />-->
   <!-- <item android:id="@+id/drawingSave"
        android:title="@string/drawingSave"
        android:visible="true"
        android:orderInCategory="9"
        app:showAsAction="never" />-->
    <item android:id="@+id/syncDetail"
        android:title="@string/serverSync"
        android:visible="true"
        android:orderInCategory="12"
        app:showAsAction="never" />
</menu>