<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_layout">
        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/userdetails"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">
                        <EditText
                                android:id="@+id/userName"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="40dp"
                                android:hint="@string/getName"
                                android:background="@drawable/roundcorner"
                                />
                        <EditText
                                android:id="@+id/userSecondName"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"
                                android:hint="@string/userLastName"
                                android:background="@drawable/roundcorner"
                                />
                    </LinearLayout>
                    <EditText
                            android:id="@+id/contactNumber"
                            android:inputType="numberSigned"
                            android:layout_width="match_parent"
                            android:hint="@string/contact_Number"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/roundcorner"/>
                    <EditText
                            android:id="@+id/userEmailAddress"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/email_address"
                            android:background="@drawable/roundcorner"/>
                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:orientation="horizontal"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp">
                                <Button
                                        android:id="@+id/cancelBtn"
                                        android:layout_width="0dp"
                                        android:layout_weight="1"
                                        android:layout_height="wrap_content"
                                        android:text="@string/exit"
                                        android:background="@drawable/custom_button"
                                        style="?android:borderlessButtonStyle"
                                        android:layout_marginRight="4dp"
                                        android:layout_marginEnd="4dp"/>

                                <Button
                                        android:id="@+id/okBtn"
                                        android:layout_width="0dp"
                                        android:layout_weight="1"
                                        android:layout_height="wrap_content"
                                        android:text="@string/ok"
                                        android:background="@drawable/custom_button"
                                        style="?android:borderlessButtonStyle"
                                        android:layout_marginLeft="4dp"
                                        android:layout_marginStart="4dp"/>
                            </LinearLayout>
                </LinearLayout>
        </ScrollView>
</LinearLayout>