<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_layout">
    <TextView
            android:text="@string/wifi"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:gravity="center"/>
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
        <LinearLayout
                android:id="@+id/displayData"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="@string/wifiOperatorName"
                        />
                <TextView
                        android:id="@+id/wifiOperatorName"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="@string/wifiMacAddress"
                        />
                <TextView
                        android:id="@+id/wifiMacAddress"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="@string/wifiMode"
                        />
                <TextView
                        android:id="@+id/wifiMode"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="@string/wifiSignalStr"
                        />
                <TextView
                        android:id="@+id/wifiSignalStr"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                    android:id="@+id/getHintName"
                    android:layout_margin="10dp"
                    android:hint="@string/hint"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/roundcorner"
                    android:inputType="text"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearLayout">
                <Button
                        android:id="@+id/btnCancel"
                        android:text="@string/cancel"
                        android:layout_width="wrap_content"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_button"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp" />
                <Button
                        android:id="@+id/btnFitPin"
                        android:text="@string/save"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_button"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
