<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_layout">
    <TextView
            android:id="@+id/txtTitle"
            android:text="@string/notePad"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:gravity="center"/>
    <!-- Hidden Layer NotePad network -->
    <LinearLayout
            android:id="@+id/notePadLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

        <EditText
                android:id="@+id/editNotePad"
                android:layout_width="fill_parent"
                android:layout_margin="10dp"
                android:background="@drawable/roundcorner"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:gravity="top|start"
                android:lines="8">
            <requestFocus />
        </EditText>
    </LinearLayout>

    <!-- /Hidden layer NotePad network -->

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp" />
        <Button
                android:id="@+id/btnFitPin"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp" />

    </LinearLayout>
</LinearLayout>